project(UnrolledLinkedList)
set(SOURCE_DIR ./source)
set(INCLUDE_DIRECTORIES ./include)
set(SOURCE_OUT ${SOURCE_DIR}/main.cpp)
set(SOURCE_LIB ${SOURCE_DIR}/UnrolledLinkedList.cpp ${SOURCE_DIR}/UnrolledLinkedListNode.cpp)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../)
add_library(UnrolledLL STATIC ${SOURCE_LIB})
add_executable(main ${SOURCE_OUT})
target_link_libraries(main UnrolledLL)