cmake_minimum_required(VERSION 3.22)
project(UnrolledLinkedList)
set(SOURCE_DIR ./source)
set(INCLUDE_DIRECTORIES ./include)
set(HEADER_FILES ${INCLUDE_DIRECTORIES}/UnrolledLinkedList.h ${INCLUDE_DIRECTORIES}/UnrolledLinkedListNode.h)
set(SOURCE_OUT ${SOURCE_DIR}/main.cpp)
set(SOURCE_LIB ${SOURCE_DIR}/UnrolledLinkedList.cpp ${SOURCE_DIR}/UnrolledLinkedListNode.cpp ${HEADER_FILES})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../)
add_library(UnrolledLL STATIC ${SOURCE_LIB})
target_include_directories(UnrolledLL PRIVATE ${INCLUDE_DIRECTORIES})
add_executable(main ${SOURCE_OUT})
target_include_directories(main PRIVATE ${INCLUDE_DIRECTORIES})
target_link_libraries(main UnrolledLL)